--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
         /* Image Styles */
         .img-preview { width: 100%; height: 160px; object-fit: cover; border-radius: 1rem; margin-top: 0.5rem; border: 1px solid #eee; }
-        .thumb-sm { width: 40px; height: 40px; object-fit: cover; border-radius: 8px; border: 1px solid #eee; flex-shrink: 0; }
+        .thumb-sm { width: 56px; height: 56px; object-fit: cover; border-radius: 10px; border: 1px solid #eee; flex-shrink: 0; }
     </style>
 </head>
 <body>
@@ -1004,8 +1004,9 @@ service cloud.firestore {
                         const img = new Image();
                         img.onload = () => {
                             const canvas = document.createElement('canvas');
-                            const MAX_WIDTH = 600;
-                            const MAX_HEIGHT = 600;
+                            // Increased resolution for better clarity on mobile
+                            const MAX_WIDTH = 1200; 
+                            const MAX_HEIGHT = 1200;
                             let width = img.width;
                             let height = img.height;
                             
@@ -1018,7 +1019,8 @@ service cloud.firestore {
                             canvas.height = height;
                             const ctx = canvas.getContext('2d');
                             ctx.drawImage(img, 0, 0, width, height);
-                            resolve(canvas.toDataURL('image/jpeg', 0.5)); // Compress to 0.5
+                            // Increased quality to 0.8 (80%)
+                            resolve(canvas.toDataURL('image/jpeg', 0.8)); 
                         };
                         img.src = e.target.result;
                     };
